Fix spacing of course-header on smaller screens since main header is fixed now

--- a/wp-content/themes/meltingpot-child/style.css
+++ b/wp-content/themes/meltingpot-child/style.css
@@ -43,7 +43,7 @@ h6 {}
 		z-index: 13;
 	}
 	header.header {
-		margin-bottom: 60px;
+		margin-top: 60px;
 	}
 }
 @media screen and (max-width: 330px) {
